--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-barcode-scanner": "^1.0.6",
+    "react-qr-barcode-scanner-updated": "^1.0.8",
+    "react-qr-reader_multiformatreader": "^1.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
